# sesli-konusma

./: .gitignore  build_output.txt  index.html  log.txt  package-lock.json  package.json  typescript_errors.txt  vercel.json  vite.config.ts
public/updates/: android.json  latest.json
scripts/: bump-version.cjs  release.cjs  update-builds.cjs
src/: App.tsx  firebase.ts  index.css  main.tsx  tauri.d.ts
src-tauri/: Cargo.toml  release.jks  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddAccountModal.tsx  Ballpit.tsx  CreateGroupModal.tsx  DownloadModal.tsx  ErrorBoundary.tsx  GlobalModal.tsx  GradientText.tsx  GroupChat.tsx  Layout.tsx  MagicBento.css  MagicBento.tsx  NotificationManager.tsx  PrivateRoute.tsx  SettingsModal.tsx  TitleBar.tsx  UserContextMenu.tsx  VoiceRoom.tsx
src/components/Watch/: ExternalPlayer.tsx  WatchSessionModal.tsx  YouTubePlayer.tsx
src/contexts/: AuthContext.tsx  SoundContext.tsx  UIContext.tsx
src/hooks/: useClickOutside.ts  useWebRTC.ts  useYouTube.ts
src/pages/: Dashboard.tsx
src/pages/Auth/: Login.tsx  Register.tsx
src/services/: WatchService.ts
src/styles/: auth.css  contextMenu.css  layout.css  notifications.css  settings.css
src/types/: Watch.ts
src/utils/: imageUtils.ts
