[package]
name = "sesli_konusma"
version = "0.1.0"
description = "Sesli Konuşma App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[lib]
name = "sesli_konusma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-updater = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-shell = "2.0.0" # Add if shell is needed

[profile.release]
lto = false
codegen-units = 1
panic = "abort"
strip = true
